cd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neo-savant-2
  labels:
    app.kubernetes.io/name: neo-savant-2
