cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-savant-2
  namespace: neo-savant-2
  labels:
    app.kubernetes.io/name: neo-savant-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: neo-savant-2
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: neo-savant-2
    spec:
      containers:
        - image: neo-savant-2
          name: neo-savant-2
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 100Mi
