cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo-savant-2
  namespace: neo-savant-2
  labels:
    app.kubernetes.io/name: neo-savant-2
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: neo-savant-2
